added exercise and training
