# internal/domain/contracts/usecases/exercise_usecase_interfaces.go
@@ -1,0 +1,11 @@
+package usecases
+
+import (
+	"context"
+
+	"github.com/reangeline/workout-plan-go/internal/dtos"
+)
+
+type ExerciseUseCaseInterface interface {
+	CreateExercise(ctx context.Context, input *dtos.CreateExerciseInput) error
+}
