# internal/validation/protocols/exercise_validator_interface.go
@@ -1,0 +1,7 @@
+package protocols
+
+import "github.com/reangeline/workout-plan-go/internal/dtos"
+
+type ExerciseValidatorInterface interface {
+	ValidateExercise(exercise *dtos.CreateExerciseInput) error
+}
